# stm32f3discovery_demo

./: .gitignore  .mxproject  LICENSE  Makefile  README.md  demo.emProject  demo.emSession  stm32f3.ioc
Core/Inc/: common.h  i2c.h  main.h  spi.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h  usart.h
Core/Src/: common.c  dma.c  gpio.c  i2c.c  main.c  spi.c  stm32f3xx_it.c  usart.c
USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
User/RING_FIFO/inc/: ring_fifo.h
User/RING_FIFO/src/: ring_fifo.c
User/nr_micro_shell/inc/: nr_micro_shell_config.h
User/nr_micro_shell/src/: nr_micro_shell_commands.c
User/other/inc/: device.h  i2c_protocol.h  i2c_reg_list.h  i2c_slave.h  mycmd.h  onchip_flash.h  param.h
User/other/src/: device.c  i2c_control.c  i2c_protocol.c  i2c_reg_list.c  i2c_slave.c  led_control.c  mycmd.c  onchip_flash.c  param.c  uart_control.c
User/task_event/app/src/: task_main.c
User/task_event/core/inc/: task.h  timer.h
User/task_event/core/src/: event.c  task.c
User/task_event/user/inc/: task_user.h
User/task_event/user/src/: task_user.c  timer_user.c
User/xcmd/inc/: xcmd.h  xcmd_confg.h  xcmd_default_confg.h  xcmd_ex_cmds.h
User/xcmd/src/: xcmd.c  xcmd_default_cmds.c  xcmd_default_keys.c  xcmd_ex_keys.c
app/: .mxproject  CMakeLists.txt  Makefile  STM32F303VCTx_FLASH.ld  stm32f3-app.ioc
app/Core/Inc/: common.h  main.h  stm32f3xx_it.h
app/Core/Src/: common.c  gpio.c  i2c.c  main.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c  usart.c
app/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
app/User/FLASH/inc/: onchip_flash.h
app/User/FLASH/src/: onchip_flash.c
app/User/KEY/inc/: combo_key.h  key.h
app/User/KEY/src/: combo_key.c  key.c
app/User/event_button/inc/: combo_key.h  key.h
app/User/event_button/src/: combo_key.c
app/User/i2c_slave/inc/: i2c_reg_list.h
app/User/i2c_slave/src/: i2c_protocol.c  i2c_slave.c
app/User/libcrc/crc32_mpeg2/: crc32_mpeg2.h
app/User/other/inc/: device.h  param.h  update.h
app/User/other/src/: device.c  i2c_control.c  i2c_protocol.c  i2c_slave.c  led_control.c  mycmd.c  onchip_flash.c  param.c  uart_control.c  update.c  update_interface.c
app/User/task_event/app/src/: task_main.c
app/User/task_event/core/src/: timer.c
app/User/task_event/user/inc/: task_user.h  timer_user.h
app/User/task_event/user/src/: task_user.c  timer_user.c
app/User/uart_device/inc/: uart_device.h
app/User/uart_device/src/: uart_device.c
app/User/xcmd/inc/: xcmd_confg.h  xcmd_default_cmds.h  xcmd_default_confg.h  xcmd_define.h  xcmd_ex_keys.h
app/User/xcmd/src/: xcmd.c  xcmd_ex_cmds.c
app/emStudio/: STM32F303VCTx_MemoryMap.xml  STM32F30x_Registers.xml  STM32F3xx_Flash_CCM.icf
app/emStudio/STM32F3xx/Device/Include/: stm32f3xx.h
app/emStudio/STM32F3xx/Source/: stm32f303xc_Vectors.s
bld/: .mxproject  CMakeLists.txt  Makefile  STM32F303VCTx_FLASH.ld  startup_stm32f303xc.s  stm32f3-bld.ioc  toolchains.cmake
bld/Core/Inc/: common.h  main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
bld/Core/Src/: dma.c  gpio.c  i2c.c  iwdg.c  main.c  stm32f3xx_it.c  usart.c
bld/User/FLASH/inc/: onchip_flash.h
bld/User/FLASH/src/: onchip_flash.c
bld/User/RING_FIFO/inc/: ring_fifo.h
bld/User/RING_FIFO/src/: ring_fifo.c
bld/User/i2c_slave/inc/: i2c_protocol.h  i2c_reg_list.h  i2c_slave.h
bld/User/i2c_slave/src/: i2c_protocol.c  i2c_reg_list.c  i2c_slave.c
bld/User/libcrc/crc32_mpeg2/: crc32_mpeg2.c
bld/User/other/inc/: device.h  param.h  update.h
bld/User/other/src/: device.c  onchip_flash.c  param.c  update.c  update_interface.c
bld/User/task_event/app/src/: task_main.c
bld/User/task_event/core/src/: task.c
bld/User/task_event/user/inc/: task_user.h
bld/User/task_event/user/src/: task_user.c  timer_user.c
bld/User/uart_device/inc/: uart_device.h
bld/User/uart_device/src/: uart_device.c
bld/emStudio/: STM32F303VCTx_MemoryMap.xml
bld/emStudio/STM32F3xx/Source/: STM32F3xx_Startup.s
emStudio/: SEGGER_THUMB_Startup.s  STM32F3xx_Flash_CCM.icf  stm32f3.emProject  stm32f3.emSession
tools/: merge.py  mySerial.py  partition_table.json  update.py  update_i2c.py
